# pyWitnessAI

./: .gitignore  README.md  pyproject.toml
docs/: ImageAnalyzer.md  LineupIdentifier.md  LineupLoader.md  VideoLineupPipeline.md
src/notebooks/: UK_vs_US.ipynb  Untitled.ipynb
src/pyWitnessAI/: Constants.py  DataFlattener.py  FillerSelector.py  ImageAnalyzer.py  Images.py  ImagesAI.py  Lineup.py  LineupAIDecision.py  LineupDecider.py  LineupIdentifier.py  LineupLoader.py  LineupPipeline.py  LineupPipeline_V2.py  Photo.py  PhotoAnalyzer.py  PhotoAssigner.py  Test.py  Video.py  VideoAnalyzer.py  VideoProcess.py  VideoProcessor.py  __init__.py  pyWitnessAI.py
src/pyWitnessAI/Old/: VideoProcess.py
src/pyWitnessAI/utils/: __init__.py  binning.py  plots.py
test/: test_ImageAnalyzer.py  test_ImageLoader.py  test_ImagesAI_similarity.py  test_Images_loading.py  test_imageloading.py  test_similarity.py  test_videolineuppipeline.py
tutorial/: 01_Similarity.ipynb  02_FRSVideoIdentification.ipynb  environment_full_cpu.yaml
