[project]
name = "pyWitnessAI"
description = "Deepface based facial recognition"
version = "0.0.1"
authors = [
    { name = "Stewart Boogert", email = "sboogert@mac.com" },
    { name = "Damien Wang", email = "damien.wang@bristol.ac.uk" }
]
dependencies = [
    "deepface",
    "numpy",
    "matplotlib",
    "ipython",
    "cv"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pyWitnessAI"]  # package names should match these glob patterns (["*"] by default)

[project.scripts]
pyWitnessAI = "pyWitnessAI:main"

[tool.setuptools.package-data]
"pyWitnessAI.FaceNet_Model" = ["src/pyWitnessAI/FaceNet_Model/FACE_DETECT.h5"]
"pyWitnessAI.OpenCV_Models" = ["src/pyWitnessAI/OpenCV_Models/*.xml"]
