[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyWitnessAI"
description = "Deepface based facial recognition"
version = "0.0.1"
authors = [
    { name = "Stewart Boogert", email = "sboogert@mac.com" },
    { name = "Damien Wang", email = "damien.wang@bristol.ac.uk" }
]

dependencies = [
    "deepface",
    "numpy",
    "matplotlib",
    "ipython",
    "cv",
    "numpy>=1.26,<2.0",
    "pandas>=2.0,<3.0",
    # "opencv-python<4.12",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pyWitnessAI"]  # package names should match these glob patterns (["*"] by default)
# include = ["DataFlattener"]

[project.scripts]
pyWitnessAI = "pyWitnessAI:main"

[tool.setuptools.package-data]
"pyWitnessAI.FaceNet_Model" = ["src/pyWitnessAI/FaceNet_Model/FACE-DETECT.h5"]
"pyWitnessAI.OpenCV_Models" = ["src/pyWitnessAI/OpenCV_Models/*.xml"]
